# Detection-Replay-Lab

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  detection.yml
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/: benchmark_replay.py
docs/: architecture.md  rule-format.md  scenario-authoring.md
rules/: cloudtrail_disable_sequence.yml  encoded_powershell.yml  lsass_process_access.yml  repeated_auth_failures.yml
scenarios/credential_access/: events.ndjson  scenario.yml
scenarios/defense_evasion/: events.ndjson  scenario.yml
src/detection_replay_lab/: __init__.py  cli.py  engine.py  evaluate.py  events.py  models.py  normalize.py  predicates.py  replay.py  report.py  rules.py  scenarios.py
tests/: __init__.py  test_builtin_scenarios.py  test_events.py  test_models_normalize.py  test_predicates.py  test_replay_evaluate.py  test_report_cli.py  test_robustness.py  test_rules_engine.py  test_scenarios.py
