[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "detection-replay-lab"
version = "0.1.0"
description = "Deterministic detection engineering, telemetry replay, and rule evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Carter LaSalle" }]
dependencies = ["PyYAML>=6.0.2"]
keywords = ["security", "detection-engineering", "sigma", "siem", "telemetry", "attack"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.scripts]
drl = "detection_replay_lab.cli:main"
detection-replay-lab = "detection_replay_lab.cli:main"

[project.urls]
Repository = "https://github.com/carterlasalle/Detection-Replay-Lab"
Issues = "https://github.com/carterlasalle/Detection-Replay-Lab/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/detection_replay_lab"]

[tool.pytest.ini_options]
addopts = "--strict-markers -q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["detection_replay_lab"]

